ACMS-1741: Site install with existing configuration using site studio and Acquia recommended config management.

--- a/modules/acquia_cms_site_studio/modules/acquia_cms_site_studio_cm/acquia_cms_site_studio_cm.info.yml
+++ b/modules/acquia_cms_site_studio/modules/acquia_cms_site_studio_cm/acquia_cms_site_studio_cm.info.yml
@@ -4,6 +4,7 @@ description: 'Contains configuration for config filter, config ignore & config s
 core_version_requirement: ^9 || ^10
 type: module
 dependencies:
+  - acquia_cms_site_studio:acquia_cms_site_studio_cm
   - config_filter:config_filter
   - config_ignore:config_ignore
   - config_split:config_split
