ACMS-1741: remove existing logic from site studio cm module.

--- a/composer.json
+++ b/composer.json
@@ -74,8 +74,7 @@
     "extra": {
         "drupal-scaffold": {
             "allowed-packages": [
-                "drupal/core",
-                "drupal/acquia_cms_site_studio"
+                "drupal/core"
             ],
             "file-mapping": {
                 "[project-root]/.editorconfig": false,
