ACMS-1730: update workflow to download drupal-recommended-settings with secrete.

--- a/.github/workflows/acquia_cms_ci.workflow.yml
+++ b/.github/workflows/acquia_cms_ci.workflow.yml
@@ -89,6 +89,13 @@ jobs:
         with:
           php-version: ${{ matrix.php-version }}
           #coverage: xdebug
+      - name: Clone Recommended settings
+        run: |
+          composer config -g github-oauth.github.com ${{ secrets.OAUTH_TOKEN }}
+          git clone https://${{ secrets.OAUTH_TOKEN }}@github.com/acquia/drupal-recommended-settings.git --branch=develop ../plugins/drupal-recommended-settings
+          REPO_DATA=$(composer config repositories.drupal-recommended-settings)
+          REPO_DATA=$(echo "${REPO_DATA}" | sed 's/vcs/path/' | sed 's/git.*git/..\/plugins\/drupal\-recommended\-settings/')
+          composer config repositories.drupal-recommended-settings --json "${REPO_DATA}"
       - name: Execute Drupal-check
         run: |
           composer install
@@ -153,6 +160,7 @@ jobs:
         run: |
           composer self-update
           composer create-project --no-dev --ignore-platform-req=php acquia/orca ../orca "$ORCA_VERSION" -n
+          composer config -g github-oauth.github.com ${{ secrets.OAUTH_TOKEN }}
           curl https://gist.githubusercontent.com/vishalkhode1/0e26b2e9637722a256c74a6cb8496e9d/raw/sut-path-reposories.patch | git -C ../orca apply
       #- name: Configure AWS Credentials
       #  uses: aws-actions/configure-aws-credentials@v1
@@ -256,6 +264,7 @@ jobs:
         run: |
           composer self-update
           composer create-project --no-dev --ignore-platform-req=php acquia/orca ../orca "$ORCA_VERSION" -n
+          composer config -g github-oauth.github.com ${{ secrets.OAUTH_TOKEN }}
           curl https://gist.githubusercontent.com/vishalkhode1/0e26b2e9637722a256c74a6cb8496e9d/raw/sut-path-reposories.patch | git -C ../orca apply
       - name: Clone Recommended settings
         run: |
@@ -351,6 +360,7 @@ jobs:
         run: |
           composer self-update
           composer create-project --no-dev --ignore-platform-req=php acquia/orca ../orca "$ORCA_VERSION" -n
+          composer config -g github-oauth.github.com ${{ secrets.OAUTH_TOKEN }}
           curl https://gist.githubusercontent.com/vishalkhode1/0e26b2e9637722a256c74a6cb8496e9d/raw/sut-path-reposories.patch | git -C ../orca apply
       - name: Clone Recommended settings
         run: |
@@ -386,6 +396,7 @@ jobs:
           ./vendor/bin/drush cr
           cd ${ORCA_SUT_DIR}
           ./tests/ci/script.sh
+
   blt_test:
     name: "BLT site install"
     runs-on: ubuntu-latest
@@ -429,6 +440,7 @@ jobs:
         run: |
           composer self-update
           composer create-project --no-dev --ignore-platform-req=php acquia/orca ../orca "$ORCA_VERSION" -n
+          composer config -g github-oauth.github.com ${{ secrets.OAUTH_TOKEN }}
           curl https://gist.githubusercontent.com/vishalkhode1/0e26b2e9637722a256c74a6cb8496e9d/raw/sut-path-reposories.patch | git -C ../orca apply
       - name: Clone Recommended settings
         run: |
