--- a/composer.json
+++ b/composer.json
@@ -150,15 +150,6 @@
         ]
     },
     "repositories": {
-        "drupal-recommended-settings": {
-            "type": "vcs",
-            "url": "git@github.com:acquia/drupal-recommended-settings.git",
-            "options": {
-                "versions": {
-                    "acquia/drupal-recommended-settings": "dev-develop"
-                }
-            }
-        },
         "acquia_cms_article": {
             "type": "path",
             "url": "./modules/acquia_cms_article",
@@ -332,11 +323,11 @@
         },
         "acquia_global_commands": {
             "type": "vcs",
-            "url": "git@github.com:vishalkhode1/acquia_global_commands.git"
+            "url": "https://github.com/vishalkhode1/acquia_global_commands.git"
         },
         "drupal-recommended-settings": {
             "type": "vcs",
-            "url": "git@github.com:acquia/drupal-recommended-settings.git"
+            "url": "https://github.com/acquia/drupal-recommended-settings.git"
         },
         "chart.js": {
             "type": "package",
