--- a/composer.json
+++ b/composer.json
@@ -323,11 +323,11 @@
         },
         "acquia_global_commands": {
             "type": "vcs",
-            "url": "https://github.com/vishalkhode1/acquia_global_commands.git"
+            "url": "git@github.com:acquia/drupal-recommended-settings.git"
         },
         "drupal-recommended-settings": {
             "type": "vcs",
-            "url": "https://github.com/acquia/drupal-recommended-settings.git"
+            "url": "git@github.com:acquia/drupal-recommended-settings.git"
         },
         "chart.js": {
             "type": "package",
