--- a/modules/acquia_config_management/composer.json
+++ b/modules/acquia_config_management/composer.json
@@ -4,7 +4,7 @@
     "description": "Provides Acquia recommended configurations management.",
     "license": "GPL-2.0-or-later",
     "require": {
-        "acquia/acquia_global_commands": "dev-main",
+        "acquia/acquia_global_commands": "dev-develop",
         "acquia/drupal-environment-detector": "^1.5"
     },
     "config": {
