ACMS-1730: review feedback changes.

--- a/.github/workflows/acquia_cms_ci.workflow.yml
+++ b/.github/workflows/acquia_cms_ci.workflow.yml
@@ -235,7 +235,7 @@ jobs:
           - acquia_cms_image, acquia_cms_document, acquia_cms_video, acquia_cms_audio
           - acquia_cms_search, acquia_cms_common, acquia_cms_tour
           - acquia_cms_headless
-          - acquia_config_management
+          # - acquia_config_management
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js 12.13.1
