--- a/modules/acquia_cms_search/composer.json
+++ b/modules/acquia_cms_search/composer.json
@@ -10,7 +10,7 @@
         "drupal/collapsiblock": "4.0.0",
         "drupal/facets": "^2.0.6",
         "drupal/facets_pretty_paths": "^1.4",
-        "drupal/search_api": "1.28",
+        "drupal/search_api": "^1.29",
         "drupal/search_api_autocomplete": "^1.7"
     },
     "config": {
